<resources>
    <string name="app_name">Smart Tickets</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="title_discover">Discover</string>
    <string name="title_my_tickets">My Tickets</string>
    <string name="title_manage">Manage Events</string>
    <string name="title_wallet">My Wallet</string>
    <string name="search_events_content_description">Search Events</string>
    <string name="filter_events_content_description">Filter Events</string>
    <string name="title_activity_maps">Map</string>
    <string name="welcome_msg">Welcome to Smart Tickets!</string>
    <string name="wallet_creation_msg">Get started by creating an Ethereum based wallet or recovering from a backed up one.</string>
    <string name="create_wallet_btn_text">Create Wallet</string>
    <string name="recover_wallet_btn_text">Recover Wallet</string>
    <string name="password_input_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="cancel_text">Cancel</string>
    <string name="passwords_don_t_match_text">Passwords don\'t match</string>
    <string name="password_too_short_text">Pasword is too short.</string>
    <string name="wallet_backup_msg">It\'s highly recommended to back up the wallet file. In case it\'s deleted you won\'t have access to the Ether stored in it.</string>
    <string name="back_up_text">Back Up</string>
    <string name="skip_text">Skip for now (Not Recommended)</string>
    <string name="wallet_created_msg">Wallet successfully created!</string>
    <string name="enter_password_hint">Enter Password</string>
    <string name="unlock_wallet_text">Unlock Your Wallet</string>
    <string name="wrong_password_text">Wrong Password</string>
    <string name="use_another_wallet_text">Use Another One</string>
    <string name="wallet_balance_text">Your Wallet Balance is:</string>
    <string name="receive_text">Receive</string>
    <string name="send_text">Send</string>
    <string name="usd_symbol">USD</string>
    <string name="eth_symbol">ETH</string>
    <string name="copy_text">Copy</string>
    <string name="wallet_address_clipboard_label">Wallet Address</string>
    <string name="copied_to_clipboard">Address copied to clipboard</string>
    <string name="send_ether_dialog_title">Send Ether</string>
    <string name="amount_input_hint">Ether Amount</string>
    <string name="recipient_address_input_hint">Recipient Address</string>
    <string name="backup_wallet_intent_text">Backup Wallet</string>
    <string name="backup_wallet_to_text">Backup wallet to…</string>
    <string name="create_text">Create</string>
    <string name="event_name_hint">Event name</string>
    <string name="event_description_hint">Event Description</string>
    <string name="location_text">Location</string>
    <string name="pick_location_text">Pick Location…</string>
    <string name="picklocationbtn_content_description">pickLocationBtn</string>
    <string name="event_images_text">Event Images</string>
    <string name="date_text">Date</string>
    <string name="time_text">Time</string>
    <string name="create_new_wallet_title">Create New Wallet</string>
    <string name="ticket_types_text">Ticket Types</string>
    <string name="time_format">HH:mm</string>
    <string name="date_format">MMMM d, yyyy</string>
    <string name="select_images_text">Select Images</string>
    <string name="refundable_text">Refundable</string>
    <string name="not_refundable_text">Not Refundable</string>
    <string name="supply_label">Supply:</string>
    <string name="price_label">Price:</string>
    <string name="add_ticket_type">Add Ticket Type</string>
    <string name="add_text">Add</string>
    <string name="usd_format">0.##</string>
    <string name="eth_format">0.#####</string>
    <string name="usd_format_sign">$ %.2f</string>
    <string name="eth_format_sign">Ξ %.5f</string>
    <string name="starting_from_text">From %.2f$</string>
    <string name="search_hint">Search Events</string>
    <string name="show_wallet_private_key_text">Show wallet private key</string>
    <string name="verify_ticket_holder">Verify Ticket holder</string>
    <string name="filter">Filter</string>
    <string name="event_transition">eventSharedElementTransition</string>
    <string name="event_image_content_description">eventImage</string>
    <string name="available_tickets_text">Available Tickets</string>
    <string name="this_ticket_is_refundable_text">This ticket is refundable.</string>
    <string name="this_ticket_is_not_refundable_text">This ticket is not refundable.</string>
    <string name="buy_ticket_text">Buy Ticket</string>
    <string name="tickets_remaining_text">%d Tickets Remaining</string>
    <string name="google_places_api_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyC81NSldEm3MD0CFwrjf3n0d9xcis2n87A
    </string>
    <string name="test_message">Since Smart Tickets is still unstable and in active development we\'re using the Ropsten Test Network of Ethereum. You can obtain test Ether from a faucet. Please don\'t send any real Ether to this wallet.</string>
    <string name="OK">Okay</string>
    <string name="test_dialog_title">Important Notice</string>
    <string name="it_s_empty_here_text">It\'s empty here…</string>
    <string name="back_up_wallet">Back up wallet</string>
    <string name="event_creation_test_message">The Event Management functionality is restricted only to addresses registered as Event Organisers but for testing purposes everyone is able to create events right now.</string>
    <string name="ticket_success">You\'ve successfully bought a Smart Ticket. It will appear in your \'My Tickets\' section in a couple of minutes.</string>
    <string name="buying_ticket_text">Buying Ticket. We\'ll notify you when it arrives…</string>
    <string name="tx_error_text">Error processing transaction</string>
    <string name="event_creation_message">Event creation successfully submitted. Your event will be live in a couple of minutes.</string>
    <string name="event_error_message">Error creating event.</string>
    <string name="event_success_title">Event creation successful</string>
    <string name="ticket_success_title">Ticket bought successfully!</string>
    <string name="refund_ticket_btn_text">Refund Ticket</string>
    <string name="selling_ticket_text">Selling Ticket. This may take a few minutes…</string>
    <string name="ticket_sell_success_title">Ticket sell success</string>
    <string name="ticket_sell_success_message">Your ticket was sold successfully! It should be removed from your \'My TIckets\' section in a few minutes.</string>
    <string name="selling_ticket_error">Error selling ticket</string>
    <string name="withdrawal_earnings_btn_text">Withdrawal Earnings</string>
    <string name="earnings_text">Earnings</string>
    <string name="earnings_usd_format">%s USD</string>
    <string name="earnings_eth_format">%s ETH</string>
    <string name="default_wallet_name">wallet.json</string>
    <string name="wallet_private_key_title">Wallet private key</string>
    <string name="show_text">Show</string>
    <string name="private_key_type_password_text">Type in your password</string>
    <string name="WRITTEN_DOWN">I\'ve written it down somewhere safe.</string>
    <string name="withdrawal_funds_pending">Attempting to withdrawal funds…</string>
    <string name="event_should_have_passed_msg">Event should have passed in order to withdrawal funds!</string>
    <string name="withdrawal_funds_error">Error withdrawaling funds!</string>
    <string name="withdrawal_funds_success">You have successfully withdrawn all of the event earnings! They should appear in your wallet in a couple of minutes.</string>
    <string name="validate_tickets">Validate Tickets</string>
    <string name="ticket_validator_title">Smart Tickets Validator</string>
    <string name="event_passed_text">This Event has passed.</string>
    <string name="nfc_coming_soon">Validation of tickets through NFC coming soon…</string>
    <string name="tap_to_scan_qr_code">Tap to scan ticket QR Code</string>
    <string name="validating_ticket">Validating ticket…</string>
    <string name="scan_another_one_text">Scan Another One</string>
    <string name="ticket_valid_text">This Smart Ticket is valid.</string>
    <string name="ticketvalid_content_description">ticketValid</string>
    <string name="ticket_not_valid_text">This Ticket is not valid!</string>
    <string name="qr_code_error">Error scanning QR code.</string>
    <string name="camera_permission_message">Smart Tickets needs camera permission in order to scan a ticket</string>
    <string name="event_creating_message">Creating event. We\'ll notify you when it\'s live…</string>
    <string name="acra_dialog_text">Sorry, but the application has crashed. A bug report will now been sent to the developers through your email.</string>
    <string name="transaction_history_label">Transaction History</string>
    <string name="unlock_text">Unlock</string>
    <string name="invalid_address_msg">Invalid Address. Make sure you\'ve spelled the address correctly!</string>
    <string name="invalid_amount_msg">Invalid Amount!</string>
    <string name="add_ticket_text">Add Ticket</string>
    <string name="activity_create_event_title">Create a new event</string>
    <string name="empty_tx_history_text">You don\'t seem to have made any transactions.</string>
    <string name="tx_history_error">Sorry, there was an error fetching your transaction history.</string>
    <string name="not_enough_funds_text">You don\'t have enough funds for this ticket</string>
    <string name="description_label">Description</string>
    <string name="no_description_text">This event doesn\'t have a description.</string>
    <string name="price_text">Price</string>
    <string name="estimated_refund_label">Estimated refund</string>
    <string name="ticket_not_refundable_text">This ticket is not refundable.</string>
    <string name="view_on_map_content_description">View On Map</string>
    <string name="time_label">Time</string>
    <string name="name_text">Name</string>
    <string name="eventimage_content_description">eventImage</string>
    <string name="price_in_ether_text">Price in Ether</string>
    <string name="price_in_usd_label">Price in USD</string>
    <string name="add_a_thumbnail_image_text">Add a Thumbnail Image</string>
    <string name="change_the_thumbnail_text">Tap to change the Thumbnail</string>
    <string name="cancel_this_event_title">Cancel This Event</string>
    <string name="withdrawal_event_not_passed_text">Once the event has passed successfully you\'ll be able to withdrawal your earnings.</string>
    <string name="cancel_event_warning">Are you sure you want to cancel this event? Cancelling the event will lead to you losing all of your earnings from it.</string>
    <string name="cancelling_event_pending_msg">Cancelling event, might take a few minutes…</string>
    <string name="cancelling_event_success_msg">Event cancelled successfully.</string>
    <string name="cancelling_event_error_msg">Error cancelling event!</string>
    <string name="cancel_event_title">Cancel Event</string>
    <string name="refund_ticket_msg">This event has been cancelled. Tap to get your money back.</string>
    <string name="sort_events_title">Sort Events By:</string>
    <string name="popularity_text">Popularity</string>
    <string name="most_recent_text">Most recent</string>
    <string name="oldest_text">Oldest</string>
    <string name="wrong_password_msg">Wrong Password</string>
    <string name="password_field_empty_msg">Password field is empty.</string>
    <string name="cancelled_event_msg">You have cancelled this Event.</string>
</resources>