<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/small_margin"
        android:text="@string/create_new_wallet_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@color/textGrey" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.OrangeInput">

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_input_hint"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:nextFocusDown="@id/confirmPassword" />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.OrangeInput">

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password_hint"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/invalidPasswordsView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwords_don_t_match_text"
        android:textColor="@color/appOrangePink"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelCreateWalletBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_btn"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:text="@string/cancel_text"
            android:textColor="@color/common_google_signin_btn_text_light"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/attemptCreateWalletBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_btn_gradient"
            android:enabled="false"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:text="@string/create_text"
            android:textColor="@color/common_google_signin_btn_text_dark"
            tools:ignore="ButtonStyle" />

    </LinearLayout>
</LinearLayout>