<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ivanasen.smarttickets.ui.activities.TicketValidatorActivity">

    <pl.bclogic.pulsator4droid.library.PulsatorLayout
        android:id="@+id/pulsator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:pulse_color="@color/colorPrimary"
        app:pulse_count="2"
        app:pulse_duration="5000"
        app:pulse_interpolator="Accelerate"
        app:pulse_repeat="0"
        app:pulse_startFromScratch="true">

        <Button
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerInParent="true"
            android:background="@drawable/circle_btn_gradient"
            android:gravity="center"
            android:padding="@dimen/default_padding"
            android:text="@string/tap_to_scan_qr_code"
            android:textColor="@color/white" />

    </pl.bclogic.pulsator4droid.library.PulsatorLayout>

    <LinearLayout
        android:id="@+id/ticketValidatingInProcessView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/circle_btn_gradient"
            android:indeterminateTint="@color/white"
            android:padding="@dimen/default_padding" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/validating_ticket"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ticketValidatingSuccessView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_btn_gradient_green"
            android:contentDescription="@string/ticketvalid_content_description"
            android:padding="@dimen/default_padding"
            android:src="@drawable/ic_check_black_24dp"
            android:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/ticket_valid_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@android:color/secondary_text_light" />

        <Button
            android:id="@+id/scanAnotherTicketBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_margin"
            android:background="@drawable/rounded_btn_gradient"
            android:padding="@dimen/default_padding"
            android:text="@string/scan_another_one_text"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ticketValidatingFailView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_btn_gradient"
            android:contentDescription="@string/ticketvalid_content_description"
            android:padding="@dimen/default_padding"
            android:src="@drawable/ic_clear_black_24dp"
            android:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/ticket_not_valid_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@android:color/secondary_text_light" />

        <Button
            android:id="@id/scanAnotherTicketBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_margin"
            android:background="@drawable/rounded_btn_gradient"
            android:padding="@dimen/default_padding"
            android:text="@string/scan_another_one_text"
            android:textColor="@color/white" />

    </LinearLayout>


</FrameLayout>
