<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="4dp"
    app:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/default_padding">

        <TextView
            android:id="@+id/priceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
            android:textColor="@android:color/secondary_text_light" />

        <TextView
            android:id="@+id/ticketPriceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/priceLabel"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
            android:textColor="@color/colorPrimary" />


        <TextView
            android:id="@+id/supplyLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_toEndOf="@id/ticketPriceTextView"
            android:text="@string/supply_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
            android:textColor="@android:color/secondary_text_light" />

        <TextView
            android:id="@+id/ticketSupplyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/supplyLabel"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/refundableView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/not_refundable_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
            android:textColor="@color/colorPrimary" />

    </RelativeLayout>

</android.support.v7.widget.CardView>